--- a/arrival.html
+++ b/arrival.html
@@ -45,14 +45,16 @@
                 </div>
                 <div class="headerIconUpper">
                     <div class="headerIcon">
-                        <div class="perIcon">
+                         <div class="perIcon">
                             <a href="./wishlist.html">
                                 <img src="img/fav.png" class="perHdImg">
+                                <span class="Wish_cart_number">13</span>
                             </a>
                         </div>
                         <div class="perIcon">
                             <a href="./cart.html">
                                 <img src="img/cart.png" class="perHdImg">
+                                <span class="Wish_cart_number">5</span>
                             </a>
                         </div>
                         <div class="perIcon searchBoxAll">
@@ -74,11 +76,13 @@
                     <div class="perIcon">
                         <a href="./wishlist.html">
                             <img src="img/fav.png">
+                            <span class="Wish_cart_number">13</span>
                         </a>
                     </div>
                     <div class="perIcon">
                         <a href="./cart.html">
                             <img src="img/cart.png">
+                            <span class="Wish_cart_number">5</span>
                         </a>
                     </div>
                     <div class="perIcon searchBoxAll" id="searchBoxAll">
@@ -136,8 +140,8 @@
 
     <div class="serachCliked_box">
         <div class="serachInput_content">
-            <div class="search_cross text-center mb-4" id="search_cross">
-                <i class="fas fa-times"></i>
+           <div class="search_cross text-end mb-3" id="search_cross">
+                <i class="fas fa-times" aria-hidden="true"></i>
             </div>
             <div class="relativeSearch">
                 <input type="text">
@@ -335,7 +339,7 @@
     </section>
 
 
-    <section class="producySlider mt-5 mb-5 pt-3 pb-5">
+    <!-- <section class="producySlider mt-5 mb-5 pt-3 pb-5">
         <div class="sliderHead text-center mb-5 mt-5">
             <h2 class="allHeading txtFadedAll">
                 Explore
@@ -371,6 +375,35 @@
        </div>
         <div class="custom-btns-prev-slider sliderLRArr sliderNotHome"><img src="img/left-arrow.png" alt=""></div>
         <div class="custom-btns-next-slider sliderLRArr sliderNotHome"><img src="img/right-arrow.png" alt=""></div>
+    </section> -->
+
+
+    <section class="arrival_down_category mt-5 mb-5 pt-3 pb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <a href="#">
+                        <div class="prodImg">
+                            <img src="img/nacklace.png" class="img-fluid">
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <a href="#">
+                        <div class="prodImg">
+                            <img src="img/earrings.png" class="img-fluid">
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <a href="#">
+                        <div class="prodImg">
+                            <img src="img/Bracelet.png" class="img-fluid">
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <div class="footer">
