--- a/compare.html
+++ b/compare.html
@@ -38,14 +38,16 @@
                 </div>
                 <div class="headerIconUpper">
                     <div class="headerIcon">
-                        <div class="perIcon">
+                         <div class="perIcon">
                             <a href="./wishlist.html">
                                 <img src="img/fav.png" class="perHdImg">
+                                <span class="Wish_cart_number">13</span>
                             </a>
                         </div>
                         <div class="perIcon">
                             <a href="./cart.html">
                                 <img src="img/cart.png" class="perHdImg">
+                                <span class="Wish_cart_number">5</span>
                             </a>
                         </div>
                         <div class="perIcon searchBoxAll">
@@ -67,11 +69,13 @@
                     <div class="perIcon">
                         <a href="./wishlist.html">
                             <img src="img/fav.png">
+                            <span class="Wish_cart_number">13</span>
                         </a>
                     </div>
                     <div class="perIcon">
                         <a href="./cart.html">
                             <img src="img/cart.png">
+                            <span class="Wish_cart_number">5</span>
                         </a>
                     </div>
                     <div class="perIcon searchBoxAll" id="searchBoxAll">
@@ -127,8 +131,8 @@
 
     <div class="serachCliked_box">
         <div class="serachInput_content">
-            <div class="search_cross text-center mb-4" id="search_cross">
-                <i class="fas fa-times"></i>
+           <div class="search_cross text-end mb-3" id="search_cross">
+                <i class="fas fa-times" aria-hidden="true"></i>
             </div>
             <div class="relativeSearch">
                 <input type="text">
@@ -158,14 +162,16 @@
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 prodDetleftBox">
                     <div class="headerIcon2 d-flex mt-3">
-                        <div class="perIcon">
+                         <div class="perIcon">
                             <a href="./wishlist.html">
                                 <img src="img/fav.png" class="perHdImg">
+                                <span class="Wish_cart_number">13</span>
                             </a>
                         </div>
                         <div class="perIcon">
                             <a href="./cart.html">
                                 <img src="img/cart.png" class="perHdImg">
+                                <span class="Wish_cart_number">5</span>
                             </a>
                         </div>
                     </div>
@@ -231,11 +237,11 @@
                             <div class="qtyTxt">
                                 Qty:
                             </div>
-                            <div class="QtyChange-box giftViewQty">
-                                <span id="ProdDetQtyNum">1</span>
-                                <div class="prodIWhole_div">
-                                    <div class="Prod_detIDiv"><i class="fas fa-sort-up QtyLogoProdDetPlus"></i></div>
-                                    <div class="Prod_detIDiv"><i class="fas fa-sort-down QtyLogoProdDet"></i></div>
+                            <div class="QtyChange-box">
+                                <div id="ProdDetQtyNum">1</div>
+                                <div class="prodIWhole_div giftViewQty d-flex">
+                                    <img class="QtyLogoProdDetPlus" src="img/other/golden-arrow-top.png" alt="uparrow">
+                                    <img  class="QtyLogoProdDet" src="img/other/golden-arrow-down.png" alt="downarrow">
                                 </div>
                             </div>
                         </div>
