--- a/contactus.html
+++ b/contactus.html
@@ -38,14 +38,16 @@
                 </div>
                 <div class="headerIconUpper">
                     <div class="headerIcon">
-                        <div class="perIcon">
+                         <div class="perIcon">
                             <a href="./wishlist.html">
                                 <img src="img/fav.png" class="perHdImg">
+                                <span class="Wish_cart_number">13</span>
                             </a>
                         </div>
                         <div class="perIcon">
                             <a href="./cart.html">
                                 <img src="img/cart.png" class="perHdImg">
+                                <span class="Wish_cart_number">5</span>
                             </a>
                         </div>
                         <div class="perIcon searchBoxAll">
@@ -67,11 +69,13 @@
                     <div class="perIcon">
                         <a href="./wishlist.html">
                             <img src="img/fav.png">
+                            <span class="Wish_cart_number">13</span>
                         </a>
                     </div>
                     <div class="perIcon">
                         <a href="./cart.html">
                             <img src="img/cart.png">
+                            <span class="Wish_cart_number">5</span>
                         </a>
                     </div>
                     <div class="perIcon searchBoxAll" id="searchBoxAll">
@@ -128,8 +132,8 @@
 
     <div class="serachCliked_box">
         <div class="serachInput_content">
-            <div class="search_cross text-center mb-4" id="search_cross">
-                <i class="fas fa-times"></i>
+           <div class="search_cross text-end mb-3" id="search_cross">
+                <i class="fas fa-times" aria-hidden="true"></i>
             </div>
             <div class="relativeSearch">
                 <input type="text">
@@ -235,12 +239,11 @@
         <div class="DownPaymentContactUs mb-5">
             <p class="m-0 ConatctPara text-center">
                 <span class="ConatctYSpan">Address: </span>
-                <span class="txtFadedAll">2nd flr aspiration vintage, 12, pretoria street, kolkata, west bengal
-                    700071.</span>
+                <span class="txtFadedAll">Aspiration vintage, 12, pretoria street, kolkata 71</span>
             </p>
             <p class="m-0 ConatctPara text-center">
                 <span class="ConatctYSpan">Phone Number: </span>
-                <span class="txtFadedAll">(033) 2282 7114 / 46001238 / 22821697 </span>
+                <span class="txtFadedAll">(033) 4004 7476</span>
                 <span class="ConatctYSpan">| Mobile Number: </span>
                 <span class="txtFadedAll">+91 9830747476</span>
             </p>
