--- a/gift.html
+++ b/gift.html
@@ -37,14 +37,16 @@
                 </div>
                 <div class="headerIconUpper">
                     <div class="headerIcon">
-                        <div class="perIcon">
+                         <div class="perIcon">
                             <a href="./wishlist.html">
                                 <img src="img/fav.png" class="perHdImg">
+                                <span class="Wish_cart_number">13</span>
                             </a>
                         </div>
                         <div class="perIcon">
                             <a href="./cart.html">
                                 <img src="img/cart.png" class="perHdImg">
+                                <span class="Wish_cart_number">5</span>
                             </a>
                         </div>
                         <div class="perIcon searchBoxAll">
@@ -66,11 +68,13 @@
                     <div class="perIcon">
                         <a href="./wishlist.html">
                             <img src="img/fav.png">
+                            <span class="Wish_cart_number">13</span>
                         </a>
                     </div>
                     <div class="perIcon">
                         <a href="./cart.html">
                             <img src="img/cart.png">
+                            <span class="Wish_cart_number">5</span>
                         </a>
                     </div>
                     <div class="perIcon searchBoxAll" id="searchBoxAll">
@@ -125,15 +129,15 @@
 
     <div class="wholeban">
         <div class="bannerCar">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div id="banner_carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                    <img src="img/select-dimond.png" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                    <img src="img/select-dimond.png" data-bs-target="#banner_carousel" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1">
-                    <img src="img/unselect-dimond-1.png" data-bs-target="#carouselExampleIndicators"
+                    <img src="img/unselect-dimond-1.png" data-bs-target="#banner_carousel"
                         data-bs-slide-to="1" aria-label="Slide 2">
-                    <img src="img/select-dimond.png" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    <img src="img/select-dimond.png" data-bs-target="#banner_carousel" data-bs-slide-to="2"
                         aria-label="Slide 3">
-                    <img src="img/select-dimond.png" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    <img src="img/select-dimond.png" data-bs-target="#banner_carousel" data-bs-slide-to="3"
                         aria-label="Slide 4">
                 </div>
                 <div class="carousel-inner">
@@ -156,8 +160,8 @@
 
     <div class="serachCliked_box">
         <div class="serachInput_content">
-            <div class="search_cross text-center mb-4" id="search_cross">
-                <i class="fas fa-times"></i>
+           <div class="search_cross text-end mb-3" id="search_cross">
+                <i class="fas fa-times" aria-hidden="true"></i>
             </div>
             <div class="relativeSearch">
                 <input type="text">
@@ -479,7 +483,7 @@
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
                     <td class="text-center gift_lower_td txtFadedAll">
-                        <a href="./compare.html">
+                        <a href="./product.html">
                             View
                         </a>
                     </td>
@@ -500,7 +504,7 @@
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
                     <td class="text-center gift_lower_td txtFadedAll">
-                        <a href="./compare.html">
+                        <a href="./product.html">
                             View
                         </a>
                     </td>
@@ -521,7 +525,7 @@
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
                     <td class="text-center gift_lower_td txtFadedAll">
-                        <a href="./compare.html">
+                        <a href="./product.html">
                             View
                         </a>
                     </td>
@@ -542,7 +546,7 @@
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
                     <td class="text-center gift_lower_td txtFadedAll">
-                        <a href="./compare.html">
+                        <a href="./product.html">
                             View
                         </a>
                     </td>
@@ -563,7 +567,7 @@
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
                     <td class="text-center gift_lower_td txtFadedAll">
-                        <a href="./compare.html">
+                        <a href="./product.html">
                             View
                         </a>
                     </td>
@@ -584,7 +588,7 @@
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
                     <td class="text-center gift_lower_td txtFadedAll">
-                        <a href="./compare.html">
+                        <a href="./product.html">
                             View
                         </a>
                     </td>
@@ -605,7 +609,7 @@
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
                     <td class="text-center gift_lower_td txtFadedAll">
-                        <a href="./compare.html">
+                        <a href="./product.html">
                             View
                         </a>
                     </td>
@@ -626,7 +630,7 @@
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
                     <td class="text-center gift_lower_td txtFadedAll">
-                        <a href="./compare.html">
+                        <a href="./product.html">
                             View
                         </a>
                     </td>
@@ -647,7 +651,7 @@
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
                     <td class="text-center gift_lower_td txtFadedAll">
-                        <a href="./compare.html">
+                        <a href="./product.html">
                             View
                         </a>
                     </td>
@@ -668,7 +672,7 @@
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
                     <td class="text-center gift_lower_td txtFadedAll">
-                        <a href="./compare.html">
+                        <a href="./product.html">
                             View
                         </a>
                     </td>
