--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
                     <div class="perIcon">
                         <a href="./wishlist.html">
                             <img src="img/fav.png">
+                            <span class="Wish_cart_number">13</span>
                         </a>
                     </div>
                     <div class="perIcon">
                         <a href="./cart.html">
                             <img src="img/cart.png">
+                            <span class="Wish_cart_number">5</span>
                         </a>
                     </div>
                     <div class="perIcon searchBoxAll" id="searchBoxAll">
@@ -144,14 +146,16 @@
                 </div>
                 <div class="headerIconUpper">
                     <div class="headerIcon">
-                        <div class="perIcon">
+                         <div class="perIcon">
                             <a href="./wishlist.html">
                                 <img src="img/fav.png" class="perHdImg">
+                                <span class="Wish_cart_number">13</span>
                             </a>
                         </div>
                         <div class="perIcon">
                             <a href="./cart.html">
                                 <img src="img/cart.png" class="perHdImg">
+                                <span class="Wish_cart_number">5</span>
                             </a>
                         </div>
                         <div class="perIcon searchBoxAll">
@@ -173,11 +177,13 @@
                     <div class="perIcon">
                         <a href="./wishlist.html">
                             <img src="img/fav.png">
+                            <span class="Wish_cart_number">13</span>
                         </a>
                     </div>
                     <div class="perIcon">
                         <a href="./cart.html">
                             <img src="img/cart.png">
+                            <span class="Wish_cart_number">5</span>
                         </a>
                     </div>
                     <div class="perIcon searchBoxAll" id="searchBoxAll">
@@ -233,8 +239,8 @@
 
     <div class="serachCliked_box">
         <div class="serachInput_content">
-            <div class="search_cross text-center mb-4" id="search_cross">
-                <i class="fas fa-times"></i>
+           <div class="search_cross text-end mb-3" id="search_cross">
+                <i class="fas fa-times" aria-hidden="true"></i>
             </div>
             <div class="relativeSearch">
                 <input type="text">
@@ -248,15 +254,15 @@
     <!-- banner  -->
     <div class="wholeban">
         <div class="bannerCar">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div id="banner_carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                    <img src="img/select-dimond.png" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                    <img src="img/select-dimond.png" data-bs-target="#banner_carousel" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1">
-                    <img src="img/unselect-dimond-1.png" data-bs-target="#carouselExampleIndicators"
+                    <img src="img/unselect-dimond-1.png" data-bs-target="#banner_carousel"
                         data-bs-slide-to="1" aria-label="Slide 2">
-                    <img src="img/select-dimond.png" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    <img src="img/select-dimond.png" data-bs-target="#banner_carousel" data-bs-slide-to="2"
                         aria-label="Slide 3">
-                    <img src="img/select-dimond.png" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    <img src="img/select-dimond.png" data-bs-target="#banner_carousel" data-bs-slide-to="3"
                         aria-label="Slide 4">
                 </div>
                 <div class="carousel-inner">
@@ -349,8 +355,8 @@
 
     <!-- productSlider -->
     <section class="producySlider mt-5 mb-4 pb-4">
-        <div class="sliderHead text-center py-4 mb-5">
-            <h2 class="allHeading">
+        <div class="sliderHead text-center py-4 mb-5 ">
+            <h2 class="allHeading txtFadedAll">
                 <span class="sliderAlFnt">Trending</span>
                 Collection
             </h2>
