--- a/diamondjourney.html
+++ b/diamondjourney.html
@@ -41,11 +41,13 @@
                         <div class="perIcon">
                             <a href="./wishlist.html">
                                 <img src="img/fav.png" class="perHdImg">
+                                <span class="Wish_cart_number">13</span>
                             </a>
                         </div>
                         <div class="perIcon">
                             <a href="./cart.html">
                                 <img src="img/cart.png" class="perHdImg">
+                                <span class="Wish_cart_number">5</span>
                             </a>
                         </div>
                         <div class="perIcon searchBoxAll">
@@ -67,11 +69,13 @@
                     <div class="perIcon">
                         <a href="./wishlist.html">
                             <img src="img/fav.png">
+                            <span class="Wish_cart_number">13</span>
                         </a>
                     </div>
                     <div class="perIcon">
                         <a href="./cart.html">
                             <img src="img/cart.png">
+                            <span class="Wish_cart_number">5</span>
                         </a>
                     </div>
                     <div class="perIcon searchBoxAll" id="searchBoxAll">
@@ -121,8 +125,8 @@
 
     <div class="serachCliked_box">
         <div class="serachInput_content">
-            <div class="search_cross text-center mb-4" id="search_cross">
-                <i class="fas fa-times"></i>
+           <div class="search_cross text-end mb-3" id="search_cross">
+                <i class="fas fa-times" aria-hidden="true"></i>
             </div>
             <div class="relativeSearch">
                 <input type="text">
@@ -192,7 +196,7 @@
                                 Rough <br>
                                 Diamonds
                             </p>
-                            <p>Before a raw diamond is processed, it
+                            <p class="D_journey_small">Before a raw diamond is processed, it
                                 resembles dull pieces of glass. These
                                 raw diamonds are taken to processing
                                 plants and are sorted into categories
@@ -236,7 +240,7 @@
                                 of Polished <br>
                                 diamonds
                             </p>
-                            <p>After the final facets are polished onto
+                            <p class="D_journey_small">After the final facets are polished onto
                                 the diamond by a brillianteer, the
                                 diamonds undergo a meticulous
                                 inspection using a 10x loop that
