--- a/ring.html
+++ b/ring.html
@@ -48,14 +48,16 @@
                 </div>
                 <div class="headerIconUpper">
                     <div class="headerIcon">
-                        <div class="perIcon">
+                         <div class="perIcon">
                             <a href="./wishlist.html">
                                 <img src="img/fav.png" class="perHdImg">
+                                <span class="Wish_cart_number">13</span>
                             </a>
                         </div>
                         <div class="perIcon">
                             <a href="./cart.html">
                                 <img src="img/cart.png" class="perHdImg">
+                                <span class="Wish_cart_number">5</span>
                             </a>
                         </div>
                         <div class="perIcon searchBoxAll">
@@ -77,11 +79,13 @@
                     <div class="perIcon">
                         <a href="./wishlist.html">
                             <img src="img/fav.png">
+                            <span class="Wish_cart_number">13</span>
                         </a>
                     </div>
                     <div class="perIcon">
                         <a href="./cart.html">
                             <img src="img/cart.png">
+                            <span class="Wish_cart_number">5</span>
                         </a>
                     </div>
                     <div class="perIcon searchBoxAll" id="searchBoxAll">
@@ -136,8 +140,8 @@
 
     <div class="serachCliked_box">
         <div class="serachInput_content">
-            <div class="search_cross text-center mb-4" id="search_cross">
-                <i class="fas fa-times"></i>
+           <div class="search_cross text-end mb-3" id="search_cross">
+                <i class="fas fa-times" aria-hidden="true"></i>
             </div>
             <div class="relativeSearch">
                 <input type="text">
@@ -434,6 +438,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- missing start -->
                 <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
                     <div class="ring-per-imags">
                         <img src="img/ring/product-8.png" class="img-fluid">
@@ -646,6 +652,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- missing end  -->
             </div>
         </div>
     </section>
